# nug4

./: CMakeLists.txt  CMakePresets.json  README.md
Modules/: FindPythia8.cmake
cmakeConfig/: CMakeLists.txt
nug4/: CMakeLists.txt
nug4/AdditionalG4Physics/: CMakeLists.txt  Py8CharmDecayerPhysics.cc  Py8CharmDecayerPhysics.hh  Py8Decayer.cc  Py8Decayer.hh  Py8TauDecayerPhysics.cc  Py8TauDecayerPhysics.hh  RegisterAddG4PhysicsShorthands.cc  RegisterAddG4PhysicsShorthands.hh
nug4/G4Base/: CMakeLists.txt  ConvertMCTruthToG4.cxx  DetectorConstruction.cxx  ExampleAction.cxx  ExampleAction.h  G4Helper.cxx  G4Helper.h  G4PhysListFactory.cc  G4PhysListFactorySingleton.cc  G4PhysListRegisterOld.icc  G4PhysicsProcessFactorySingleton.cc  G4PhysicsProcessRegisterOld.icc  GlobalMagneticField.cxx  GlobalMagneticField.h  PrimaryParticleInformation.cxx  PrimaryParticleInformation.h  UserActionFactory.cxx  UserActionFactory.h  UserActionManager.cxx  UserActionManager.h
nug4/MagneticField/: CMakeLists.txt  MagneticField.h  MagneticFieldStandard.cxx  MagneticFieldStandard.h  MagneticField_service.cc  magfield.fcl
nug4/MagneticFieldServices/: CMakeLists.txt  MagneticFieldService.h  MagneticFieldServiceStandard.cc  MagneticFieldServiceStandard.h  MagneticFieldServiceStandard_service.cc
nug4/ParticleNavigation/: CMakeLists.txt  EmEveIdCalculator.cxx  EmEveIdCalculator.h  EveIdCalculator.cxx  ParticleHistory.cxx  ParticleList.cxx
ups/: product_deps  setup_for_development
